# learn-opengl

./: .gitignore  CMakeLists.txt
chapters/chapter_01/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/common/: camera.h  mesh.h  model.h  shader.h  utils.h
lib/common/src/: camera.cpp  mesh.cpp  model.cpp  shader.cpp  utils.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
lib/stb/include/: stb_image.h
shaders/chapter_01/: camera.frag  camera.vert  shaders.frag  textures.frag  textures.vert  transformations.vert
shaders/chapter_02/basic_lighting/: light.frag  light.vert  object.frag  object.vert
shaders/chapter_02/colors/: object.frag
shaders/chapter_02/light_casters/: object.frag
shaders/chapter_02/lighting_maps/: object.frag  object.vert
shaders/chapter_02/materials/: object.frag  object.vert
shaders/chapter_02/multiple_lights/: light.frag  object.frag  object.vert
sources/: CMakeLists.txt
sources/chapter_01/: CMakeLists.txt  Camera.cpp  coordinate_systems.cpp  creating_a_window.cpp  hello_triangle.cpp  shaders.cpp  textures.cpp  transformations.cpp
sources/chapter_01/utils/: camera.cpp  camera.h  shader.cpp  shader.h
sources/chapter_02/: CMakeLists.txt  basic_lighting.cpp  colors.cpp  light_casters.cpp  lighting_maps.cpp  materials.cpp  multiple_lights.cpp
sources/chapter_03/: CMakeLists.txt  loading_model.cpp
