add_executable(cha0201_colors colors.cpp)
target_link_libraries(cha0201_colors common)

add_executable(cha0202_basic_lighting basic_lighting.cpp)
target_link_libraries(cha0202_basic_lighting common)

add_executable(cha0203_materials materials.cpp)
target_link_libraries(cha0203_materials common)

add_executable(cha0204_lighting_maps lighting_maps.cpp)
target_link_libraries(cha0204_lighting_maps common)

add_executable(cha0205_light_casters light_casters.cpp)
target_link_libraries(cha0205_light_casters common)

add_executable(cha0206_multiple_lights multiple_lights.cpp)
target_link_libraries(cha0206_multiple_lights common)
